# adventofcode2020

./: .editorconfig  .gitignore  Cargo.toml  Justfile  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml  docs.yml  format.yml  lint.yml  tests.yml
adventofcode2020/: all.html  fn.initialize_command_line.html  index.html  sidebar-items.js
adventofcode2020/common/: index.html  sidebar-items.js  struct.Vec2.html  struct.Vec3.html  struct.Vec4.html
adventofcode2020/days/: index.html  sidebar-items.js
adventofcode2020/days/day01/: fn.run_ex1.html  fn.run_ex2.html  fn.search_if_eq.html  index.html  sidebar-items.js
adventofcode2020/days/day02/: fn.parse_password_entry.html  fn.run_ex1.html  fn.run_ex2.html  fn.validate_multiple_passwords_with_count.html  fn.validate_multiple_passwords_with_fn.html  fn.validate_multiple_passwords_with_position.html  fn.validate_password_with_count.html  fn.validate_password_with_position.html  index.html  sidebar-items.js
adventofcode2020/days/day03/: enum.MapCell.html  fn.run_ex1.html  fn.run_ex2.html  index.html  sidebar-items.js  struct.TobogganMap.html
adventofcode2020/days/day04/: fn.run_ex1.html  fn.run_ex2.html  index.html  sidebar-items.js  struct.PassportValidator.html
adventofcode2020/days/day05/: fn.run_ex1.html  fn.run_ex2.html  index.html  sidebar-items.js  struct.BoardingPass.html
adventofcode2020/shell/: fn.initialize_command_line.html
src/: lib.rs  main.rs  shell.rs
src/adventofcode2020/: lib.rs.html  shell.rs.html
src/common/: mod.rs
src/days/: mod.rs
(+248 files in other folders)
