[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
env_logger = "0.8"
eyre = "0.6"
itertools = "0.9"
log = "0.4"
once_cell = "1.4"
structopt = "0.3"
regex = "1.4"
serde = { version = "1", features = ["derive"]}
serde_plain = "0.3"