[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0"
itertools = "0.9"
maplit = "1.0"
once_cell = "1.4"
structopt = "0.3"
regex = "1.4"
serde = { version = "1", features = ["derive"]}
serde_plain = "0.3"
thiserror = "1.0"
